New control for shell components size
Files have been renamed and a new class for detecting connected
components.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ PROJECT(ShellExpansion)
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
 
-add_executable(ShellExpansion MACOSX_BUNDLE main _database _shell)
+add_executable(ShellExpansion MACOSX_BUNDLE main _cc_finder _database _eblob)
 
 if(VTK_LIBRARIES)
   target_link_libraries(ShellExpansion ${VTK_LIBRARIES})
